# gelato-sandbox

./: .gitmodules  CMakeLists.txt
source/: sandbox.cpp
vsstudio/: generate_vs2015.bat
